k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: shopware
    labels:
        pod-security.kubernetes.io/enforce: baseline
        pod-security.kubernetes.io/audit: restricted
        pod-security.kubernetes.io/warn: restricted
