k8s/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
    name: shopware-web
    labels:
        app.kubernetes.io/name: shopware
        app.kubernetes.io/component: web
spec:
    type: ClusterIP
    selector:
        app.kubernetes.io/name: shopware
        app.kubernetes.io/component: web
    ports:
        - { name: http,    port: 80,   targetPort: 8000 }
        - { name: metrics, port: 9253, targetPort: 9253 }
